--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,7 +18,7 @@ jobs:
         run: |
           echo "$PRIVATE_KEY" > private_key && chmod 400 private_key
           ssh -o StrictHostKeyChecking=no -i private_key ubuntu@${{secrets.HOSTNAME}} '
-            cd /var/www/html/ &&
+            cd /var/www/html/chatbot &&
             sudo git pull origin master &&
             python3 chatbot.py &&
             nohup gunicorn -w 1 -b 0.0.0.0:5001 chatbot:app > /dev/null 2>&1 &'
