--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,5 +20,7 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i private_key ubuntu@${{secrets.HOSTNAME}} '
             cd /var/www/html/chatbot &&
             sudo git pull origin master &&
+            cd .. &&
+            sudo mv chatbot/* /var/www/html &&
             python3 chatbot.py &&
             nohup gunicorn -w 1 -b 0.0.0.0:5001 chatbot:app > /dev/null 2>&1 &'
